<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_movie_title_label"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/textViewMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_movie_release_date_label"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/textViewMovieReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_movie_rating_label"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBarMovieVoteAverage"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="@integer/rating_bar_num_stars"
        android:rating="2.5"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/textViewMovieVoteAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceCaption"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_movie_overview_label"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/textViewMovieOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_similar_movies_label"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSimilarMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_similar_movie" />

</LinearLayout>
